[package]
name          = "alto_logger"
version       = "0.3.6"
edition       = "2018"

authors       = ["museun <museun@outlook.com>"]
repository    = "https://github.com/museun/alto_logger"
documentation = "https://docs.rs/alto_logger"

description   = "an opinionated logger that provides colorful and multi-line output"

license       = "0BSD"
readme        = "README.md"

keywords      = ["log", "logging", "logger"]
categories    = ["development-tools::debugging"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
log       = { version = "0.4", features = ["std"] }
termcolor = "1.1"
time      = { version = "0.2", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
doc-comment = "0.3"
log         = { version = "0.4", features = ["std"] }
rand        = "0.7.3"

[[example]]
name = "demo"
required-features = ["time"]
