[package]
name          = "alto_logger"
version       = "0.4.0"
edition       = "2021"

authors       = ["museun <museun@outlook.com>"]
repository    = "https://github.com/museun/alto_logger"
documentation = "https://docs.rs/alto_logger"

description   = "an opinionated logger that provides colorful and multi-line output"

license       = "0BSD"
readme        = "README.md"

keywords      = ["log", "logging", "logger"]
categories    = ["development-tools::debugging"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
log       = { version = "0.4.17", features = ["std"] }
termcolor = "1.1.3"
time      = { version = "0.3.9", optional = true, default-features = false, features = ["std", "parsing", "formatting"] }

[dev-dependencies]
doc-comment = "0.3.3"
log         = { version = "0.4.17", features = ["std"] }
rand        = "0.8.5"
time        = { version = "0.3.9", features = ["macros"] }

[[example]]
name = "demo"
required-features = ["time"]
